Convert crate to library with examples binaries
The existing main example is moved to the binary "demo".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ libc = "0.2.78"
 #mio = { version = "0.7", features = ["os-poll", "os-util"] }
 mio = { version = "0.6", features = [] }
 futures = "0.3"
+
+[[example]]
+name = "demo"
+
